--- a/backup-app/AndroidManifest.xml
+++ b/backup-app/AndroidManifest.xml
@@ -50,6 +50,15 @@
             android:screenOrientation="portrait"
             />
         
+        <receiver android:name=".method.BackupAdminReceiver"
+                android:permission="android.permission.BIND_DEVICE_ADMIN">
+            <meta-data android:name="android.app.device_admin"
+                       android:resource="@xml/device_admin_sample" />
+            <intent-filter>
+                <action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
+            </intent-filter>
+        </receiver>
+        
         <receiver
             android:name="com.google.android.gcm.GCMBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND" >
