--- a/backup-app/AndroidManifest.xml
+++ b/backup-app/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity
             android:name="com.backupapp.LoginActivity"
             android:label="@string/app_name"
+            android:noHistory="true"
             android:windowSoftInputMode="adjustResize|stateVisible"
             android:screenOrientation="portrait" >
        	 	 <intent-filter>
