--- a/trunk/backup-app/AndroidManifest.xml
+++ b/trunk/backup-app/AndroidManifest.xml
@@ -35,7 +35,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.backupapp.LoginActivity"
+            android:name="com.backupapp.RegistrationActivity"
             android:label="@string/app_name"
             android:noHistory="true"
             android:windowSoftInputMode="adjustResize|stateVisible"
@@ -45,6 +45,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity 
+            android:name="com.backupapp.LoginActivity"
+            android:screenOrientation="portrait"
+            />
         
         <activity 
             android:name="com.backupapp.MethodActivity"
