--- a/trunk/backup-app/AndroidManifest.xml
+++ b/trunk/backup-app/AndroidManifest.xml
@@ -49,7 +49,16 @@
         <activity 
             android:name="com.backupapp.RegistrationActivity"
             android:screenOrientation="portrait"
-            />
+            >
+       	 	<intent-filter>
+    			<category android:name="android.intent.category.DEFAULT" />
+    			<action android:name="android.intent.action.VIEW" />
+    			<data 
+    			    android:scheme="app"
+    			    android:host="backup" 
+    				/>  
+			</intent-filter>
+       	</activity> 	 
         
         <activity 
             android:name="com.backupapp.MethodActivity"
